--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Marvin Vilasyack. I'm a driven self-starter, leader, and have a passion for building modern web applications. I have about 3 years of professional development experience. Currently, I am a full-time developer at U.S. Bank."
+      content="My name is Marvin Vilaysack. I'm a driven self-starter, leader, and have a passion for building modern web applications. I have about 3 years of professional development experience. Currently, I am a full-time developer at U.S. Bank."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
