--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/mv-social-image.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/mv-social-image.png" /> 
     <meta property="og:image" content="%PUBLIC_URL%/mv-social-image" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of %PUBLIC_URL% in the tags above. yes
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
