updates to my pic

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="twitter:image" content="%PUBLIC_URL%/mv-social-image.png" /> 
-    <meta property="og:image" content="%PUBLIC_URL%/mv-social-image" />
+    <meta property="og:image" content="%PUBLIC_URL%/mv-social-image.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above. yes
       It will be replaced with the URL of the `public` folder during the build.
